The flex animatios have been added to sec-8 and also some links in sec-4 and sec-1

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="sec-1">
                 <h1>Bring the holiday cheer with Christmas Vacation</h1>
                 <p>Our popular holiday coffee blend is back in stock! A blend made for gatherings.</p>
-                <button><p>BUY CHRISTMAS VACATION</p></button>
+                <a href="https://methodicalcoffee.com/products/christmas-vacation"><button><p>BUY CHRISTMAS VACATION</p></button></a>
         </section>
         <section class="sec-2">
             <img src="./img/nyt_200x.avif" alt="">
@@ -78,21 +78,21 @@
                 <h3>Classic Coffee</h3>
                 <p>Classic coffees are low maintenance and a friend to all. They're reminiscent of the classic coffees we grew up with. Dark and roasty but never bitter. They fit in everywhere, from a diner to a boutique coffee shop.</p>
                 <p class="sec-4italic">Sound like you?</p>
-                <button>SHOP CLASSIC</button>
+                <a href="https://methodicalcoffee.com/collections/classic-coffees"><button>SHOP CLASSIC</button></a>
             </div>
             <div>
                 <div><a href="https://methodicalcoffee.com/collections/contemporary-coffees"><img src="./img/classics2_500x.webp" alt="Contemporary Coffe"></a></div>
                 <h3>Contemporary Coffee</h3>
                 <p>Contemporary coffees are nuanced and complex. They're friendly. Easy going. Not in-your-face. But they're original, too. They keep your attention but don't make a fuss about it, making them perfect as your daily drinker.</p>
                 <p class="sec-4italic">Sound like you?</p>
-                <button>SHOP CONTEMPORARY</button>
+                <a href="https://methodicalcoffee.com/collections/contemporary-coffees"><button>SHOP CONTEMPORARY</button></a>
             </div>
             <div>
                 <div><a href="https://methodicalcoffee.com/collections/avant-garde-coffees"><img src="./img/classics3_500x.webp" alt="Avant-garde Coffe"></a></div>
                 <h3>Avant-garde Coffee</h3>
                 <p>Avant-garde coffees have been everywhere, done everything and they're back to tell their friends about it. They're a little out there. Not for everyone. But if you’re up for it, they’ll show you a great time.</p>
                 <p class="sec-4italic">Sound like you?</p>
-                <button>SHOP AVANT-GARDE</button>
+                <a href="https://methodicalcoffee.com/collections/avant-garde-coffees"><button>SHOP AVANT-GARDE</button></a>
             </div>
         </section>
         <section class="sec-5">
@@ -150,7 +150,7 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="grid2"> 
                     <div class="left">
-                        <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a>
+                        <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                         <div>
                             <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
                             <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
@@ -158,21 +158,21 @@
                     </div>
                     <div class="right">
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h4>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h4>How to Get Into Coffee: A Guide to Coffee for Beginners</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h4>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h4></a>
@@ -185,22 +185,22 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="sec-mobile">
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a></div>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a></div>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h1>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a></div>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h1>How to Get Into Coffee: A Guide to Coffee for Beginners</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a></div>
+                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h1>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h1></a>
                 </div>
