The footer icon animation has been improved

--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
             </div>
             <div class="imgbottom">
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><img src="./img/teaimg.webp" alt="How to Make a Pour Over Coffee"><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><p>MANUAL BREWING</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-make-a-pour-over-coffee"><h3>How to Make a Pour Over Coffee</h3></a>
                 </div>
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><img src="./img/expresso.webp" alt="How to Clean Your Espresso Machine"><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-clean-your-espresso-machine"><h3>How to Clean Your Espresso Machine</h3></a>
                 </div>
                 <div class="carousel">
-                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                    <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><img src="./img/lattebeginers.webp" alt="How To Pour Latte Art (Pro Tips for Beginners)"><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><p>ESPRESSO</p></a>
                     <a href="https://methodicalcoffee.com/blogs/brew-guides/how-to-pour-latte-art-pro-tips-for-beginners"><h3>How To Pour Latte Art (Pro Tips for Beginners)</h3></a>
                 </div>
@@ -150,7 +150,7 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="grid2"> 
                     <div class="left">
-                        <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                        <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                         <div>
                             <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
                             <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
@@ -158,21 +158,21 @@
                     </div>
                     <div class="right">
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h4>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h4>How to Get Into Coffee: A Guide to Coffee for Beginners</h4></a>
                             </div>
                         </div>
                         <div class="subright">
-                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></a>
+                            <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                             <div>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
                                 <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h4>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h4></a>
@@ -185,22 +185,22 @@
             <h1 class="h1sc8">Methodical Culture</h1>
             <div class="sec-mobile">
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><img src="./img/coffee_cocktail.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><p>MANUAL BREWING</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/20-coffee-cocktails-you-need-to-try"><h1>20 Coffee Cocktails You Need to Try</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><img src="./img/granosC.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/fresh-ground-coffee-vs-pre-ground-which-is-best-for-your-brew"><h1>Fresh Ground Coffee vs. Pre-Ground: Which is Best for Your Brew?</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><img src="./img/right1.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/how-to-get-into-coffee-a-guide-to-coffee-for-beginners"><h1>How to Get Into Coffee: A Guide to Coffee for Beginners</h1></a>
                 </div>
                 <div class="mobile-items">
-                    <div><a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""></a><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div>
+                    <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><img src="./img/right2.webp" alt=""><div class="icon-container"><svg class="image-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3"/></svg></div></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><p>HOME BARISTA</p></a>
                     <a href="https://methodicalcoffee.com/blogs/coffee-culture/the-art-of-gifting-coffee-what-every-coffee-lover-really-wants"><h1>The Art of Gifting Coffee: What Every Coffee Lover Really Wants</h1></a>
                 </div>
