The mobile sec-8 animation has been improved

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <h3>EXPLORE</h3>
             <ul>
               <li><a href="https://methodicalcoffee.com/pages/about-us">About Us</a></li>
-              <li><a href="https://methodicalcoffee.com/pages/home-brewers-league">Home Brewer’s League</a></li>
+              <li><a href="https://methodicalcoffee.com/pages/home-brewers-league">Home Brewer's League</a></li>
               <li><a href="https://methodicalcoffee.isolvedhire.com/jobs/">Job Opportunities</a></li>
               <li><a href="https://methodicalcoffee.com/blogs/brew-guides">Brew Guides</a></li>
               <li><a href="https://methodicalcoffee.com/blogs/coffee-culture">Coffee Culture</a></li>
